[package]
name = "appstore_types"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "appstore_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
hc_crud_caps = { git = "https://github.com/matthme/rust-hc-crud-caps", branch = "holochain-0.2.3-beta-rc.1" }
hdi = "=0.3.3-beta-rc.0"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
