[package]
name = "appstore"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "appstore"
crate-type = ["cdylib", "rlib"]

[dependencies]
appstore_types = {path = "../../appstore_types"}
essence_payloads = "0.1"
hc_crud_caps = { git = "https://github.com/mrruby/rust-hc-crud-caps", rev = "2c5494834d8ba55bb3f5d1f30352e35cee947513"}
hc_utils = {path = "../../hc_utils"}
hdi = "=0.3.2"
hdk = "=0.2.2"
mere_memory_types = { git = "https://github.com/mrruby/hc-zome-mere-memory" }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
