[package]
name = "appstore"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "appstore"
crate-type = ["cdylib", "rlib"]

[dependencies]
appstore_types = {path = "../../appstore_types"}
essence_payloads = "0.1"
hc_crud_caps = { git = "https://github.com/matthme/rust-hc-crud-caps", branch = "holochain-0.2.3-beta-rc.1" }
hc_utils = {path = "../../hc_utils"}
hdi = "=0.3.3-beta-rc.0"
hdk = "=0.2.3-beta-rc.0"
mere_memory_types = { git = "https://github.com/matthme/hc-zome-mere-memory", branch = "holochain-0.2.3-beta-rc.1" }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
