[package]
name = "appstore_api"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "appstore_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
appstore = {path = "../appstore"}
hc_utils = {path = "../../hc_utils"}
hdk = "=0.2.3-beta-rc.0"
hex = "0"
mere_memory_types = { git = "https://github.com/matthme/hc-zome-mere-memory", branch = "holochain-0.2.3-beta-rc.1" }
hc_portal_types = { git = "https://github.com/matthme/portal-dna", branch = "holochain-0.2.3-beta-rc.1" }
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
